tests/bugs/empty_file_314.sy
// error: Expected a start function in the main module
